# fortran-cxx-example

./: CMakeLists.txt  README.md  main.cpp
cxxbinding/: FortranWrapper.cpp  FortranWrapper.hpp
example1/: CMakeLists.txt  main.cpp  simple.cpp  test_split_with_cxx.cpp  test_structure.cpp
example1/fortranlib/: square.f90
example2/: CMakeLists.txt  main.cpp
example2/cxxbinding/: CMakeLists.txt
fortranlib/: CMakeLists.txt  populate_structure.f90  split_with_comma.f90  square.f90  test_split_with_comma.f90
